force-app/main/default/objects/OpportunityLineItem/fields/Overridden_Rule__c.field-meta.xml
<CustomField>
    <fullName>Overridden_Rule__c</fullName>
    <label>Overridden Rule</label>
    <length>255</length>
    <type>Text</type>
</CustomField>