force-app/main/default/objects/OpportunityLineItem/fields/Overriden__c.field-meta.xml
<CustomField>
    <fullName>Overriden__c</fullName>
    <formula>IF(ISBLANK(Overriden_Rule_Assignment_Id__c) , false,true)</formula>
    <label>Overriden</label>
    <type>Checkbox</type>
</CustomField>