force-app/main/default/objects/OpportunityLineItem/fields/Overriden_Rule_Assignment_Id__c.field-meta.xml
<CustomField>
    <fullName>Overriden_Rule_Assignment_Id__c</fullName>
    <description>Hold id of rule assignment which rule is stamp.</description>
    <inlineHelpText>It is only to store id to identify rule assignment type.</inlineHelpText>
    <label>Overriden_Rule Assignment Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>