force-app/main/default/objects/OpportunityLineItem/fields/RevRecOpportunityLineItem__c.field-meta.xml
<CustomField>
    <fullName>RevRecOpportunityLineItem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RevRecOpportunityLineItem</label>
    <referenceTo>RevRecOpportunityLineItem__c</referenceTo>
    <relationshipLabel>Opportunity Product</relationshipLabel>
    <relationshipName>Opportunity_Product</relationshipName>
    <type>Lookup</type>
</CustomField>