force-app/main/default/objects/OpportunityLineItem/fields/RevRecRule__c.field-meta.xml
<CustomField>
    <fullName>RevRecRule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RevRecRule</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>RevRecRules__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>RevRecRules__c</referenceTo>
    <relationshipLabel>Opportunity Product</relationshipLabel>
    <relationshipName>Opportunity_Product</relationshipName>
    <type>Lookup</type>
</CustomField>