force-app/main/default/objects/OpportunityLineItem/fields/Rule_Assignment_Type__c.field-meta.xml
<CustomField>
    <fullName>Rule_Assignment_Type__c</fullName>
    <formula>IF(ISBLANK(Overriden_Rule_Assignment_Id__c) , &#39;&#39;, HYPERLINK(&quot;/&quot;&amp;Overriden_Rule_Assignment_Id__c, &quot;[Overriden]&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rule Assignment Type</label>
    <type>Text</type>
</CustomField>